# monitor_process

./: README.md  t
client/: CMakeLists.txt  Makefile  client  client.cpp  main.cpp  process.cpp  process.h  tcp_client.cpp  tcp_client.h
server/: app.py  clients.json  config.py  server.py
server/auth/: authenticator.py  clients.json
server/core/: process_db.py  tcp_server.py
server/static/: app.js
server/templates/: index.html
server/utils/: logger.py
test/: app.py  sample_process.json
test/templates/: index.html
